--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@ IMPORTANT Notes:
 <html>
 
 <head>
+  <META http-equiv='Content-Type' content='text/html; charset=us-ascii'>
   <title>Setup your device</title>
   
   <link rel='stylesheet' type='text/css' href='style.css'>
