--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 
 <!--
-
 IMPORTANT Notes:
 1- File must NOT contain any double quotes (")
 2- Do not add any additional <style> or <script> tags
 3- Do to minification process, you must attach events to DOM elements in javascript and not in the HTML. i.e. do not use <Button onclick=myfunc>
-
 -->
 
 <html>
 
 <head>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <title>Setup your device</title>
+  <title>SoftAP Setup</title>
   <link rel='stylesheet' type='text/css' href='style.css'>
+  <link rel='shortcut icon' href='connect.png'>
 </head>
 
 <body>
-  <h1>Connect me to your WiFi!</h1>
+  <h1>SoftAP Setup</h1>
   
-  <h3>My device ID:</h3>
-  <input type=text id='device-id' size='25' value='' disabled/>
-  <button type='button' class='input-helper' id='copy-button'>Copy</button>
+  <div id='initial-div' style='display: none'>
+  <h2>Let's connect your device to the Wifi.</h2>
+    <p>
+      <ol>
+        <li>Plug-in your device.</li>
+        <li>Make sure it is blinking blue. If it isn't, press and hold the 'S' button until it does.</li>
+        <li>Disconnect from your WiFi and Connect to the new WiFi hotspot it creates. It will appear as <i>Photon-XXXX</i> on your network list.</li>
+        <li>Press Next.</li>
+      </ol>
+    <p>
+    <button id='initial-button' type='button'>Next</button>
+  </div>
   
-  <div id='scan-div'>
+  <div id='device-id-div' style='display: none'>
+    <h3>Device ID:</h3>
+    <input type=text id='device-id' size='25' value='' disabled/>
+    <button type='button' class='input-helper' id='copy-button'>Copy</button>
+  </div>
+  
+  <div id='scan-div' style='display: none'>
     <h3>Scan for visible WiFi networks</h3>
     <button id='scan-button' type='button'>Scan</button>
   </div>
@@ -33,7 +47,7 @@ IMPORTANT Notes:
   </div>
   
   <div id='connect-div' style='display: none'>
-    <p>Don't see your network? Move me closer to your router, then re-scan.</p>
+    <p>Don't see your network? Move your device closer to your router, then re-scan.</p>
     <form id='connect-form'>
       <input type='password' id='password' size='25' placeholder='password'/>
       <button type='button' class='input-helper' id='show-button'>Show</button>
