--- a/src/index.html
+++ b/src/index.html
@@ -18,26 +18,26 @@ IMPORTANT Notes:
 
 <body>
   <h1>SoftAP Setup</h1>
-  
+
   <div id='initial-div' style='display: none'>
   <h2>Let's connect your device to the Wifi.</h2>
     <p>
       <ol>
         <li>Plug-in your device.</li>
-        <li>Make sure it is blinking blue. If it isn't, press and hold the 'S' button until it does.</li>
-        <li>Disconnect from your WiFi and Connect to the new WiFi hotspot it creates. It will appear as <i>Photon-XXXX</i> on your network list.</li>
+        <li>Press the `setup` button for 3 seconds until it blinks a dark blue.</li>
+        <li>Disconnect from your WiFi and Connect to the new WiFi hotspot created by the device. It will appear as <i>Photon-XXXX</i> on your network list.</li>
         <li>Press Next.</li>
       </ol>
     <p>
-    <button id='initial-button' type='button'>Next</button>
+    <button id='initial-button' type='button'>Next Step</button>
   </div>
-  
+
   <div id='device-id-div' style='display: none'>
     <h3>Device ID:</h3>
     <input type=text id='device-id' size='25' value='' disabled/>
     <button type='button' class='input-helper' id='copy-button'>Copy</button>
   </div>
-  
+
   <div id='scan-div' style='display: none'>
     <h3>Scan for visible WiFi networks</h3>
     <button id='scan-button' type='button'>Scan</button>
@@ -45,9 +45,9 @@ IMPORTANT Notes:
 
   <div id='networks-div'>
   </div>
-  
+
   <div id='connect-div' style='display: none'>
-    <p>Don't see your network? Move your device closer to your router, then re-scan.</p>
+    <p>Don't see your network? Move your device closer to your router and then re-scan.</p>
     <form id='connect-form'>
       <input type='password' id='password' size='25' placeholder='password'/>
       <button type='button' class='input-helper' id='show-button'>Show</button>
@@ -66,7 +66,3 @@ IMPORTANT Notes:
 
 
 </html>
-
-
-
-
